--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -20,6 +20,9 @@
     <%- include("../includes/navbar.ejs") %>
     
     <div class="container">
+        <%- include("../includes/flash.ejs") %>
+       
+
         <%- body %>
     </div>
 
