--- a/views/show.ejs
+++ b/views/show.ejs
@@ -2,56 +2,85 @@
 
     <div class="row mt-3">
         <div class="col-8 offset-3">
-            <h3>Listing detels </h3>
+            <h3><b>
+                    <%= Listing.title %>
+                </b></h3>
         </div>
 
-        <div class="card col-6 offset-3  show-card">
+        <div class="card col-6 offset-3  show-card listing-card">
             <img src="<%= Listing.image %>" class="card-img-top show-imag" alt="listing_image" />
             <div class="card-body">
                 <p class="card-text">
-                    <b><%= Listing.title %></b><br>
+                    <!-- <b><%= Listing.title %></b><br> -->
                     <%= Listing.description %><br>
-                    &#8377;<%=Listing.price%><br>
-                    <%= Listing.location %><br>
-                    <%= Listing.country %><br>
-                    <%= Listing.country %><br>
+                        &#8377;<%=Listing.price.toLocaleString("en-IN")%><br>
+                            <%= Listing.location %><br>
+                                <%= Listing.country %><br>
+                                    <%= Listing.country %><br>
 
                 </p>
             </div>
         </div>
-    <br>
-        <!-- <ul>
-            <li>
-                <%= Listing.title %>
-            </li>
-            <li>
-                <%= Listing.description %>
-            </li> -->
-            <!-- <li><%= Listing.image %> </li>
-            <li> &#8377;<%=Listing.price%>
-            </li>
-            <li>
-                <%= Listing.location %>
-            </li>
-            <li>
-                <%= Listing.country %>
-            </li>
-        </ul>
-        <br> -->
-       
-        
+        <br>
+
     </div>
     <div class="btns">
         <a href="/listing/<%= Listing._id %>/edit" class="btn btn-dark  col-1 offset-3  edit-btn">Edit</a>
-    
 
-    
-    
-    
-        <form method="post" action="/listing/<%= Listing._id%>?_method=DELETE">
+        <form method="post" action="/listing/<%= Listing._id%>?_method=delete">
             <button class="btn btn-dark  offset-5">Delete</button>
         </form>
     </div>
-</div>
 
-    
+
+    <div class="col-8 offset-3 mb-3">
+        <br>
+        <h4>Leave a Review</h4>
+
+        <form action="/listing/<%= Listing._id %>/reviews" method="post" class="needs-validation" novalidate>
+            <div class="mb-3 mt-3">
+                <label for="rating" class="form-lable">Rating</label>
+                <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range" />
+            </div>
+
+            <div class="mb-3 mt-3">
+                <div>
+                    <label for="comment" class="form-lable">Comment</label>
+                    <textarea name="review[comment]" id="comment" cols="38" rows="5" class="form-control"
+                        required></textarea>
+                    <div class="invalid-feedback">Please add some comments for review</div>
+                </div>
+                <br>
+                <button class="btn btn-outline-dark">Submit</button>
+
+        </form>
+        <hr>
+        <p><b>All Reviews</b></p>
+
+        <div class="row">
+            <% for(review of Listing.reviews){ %>
+                <div class="card col-5 ms-3 mb-3">
+                    <div class="card-body">
+                        <h5 class="card-title">jane doe</h5>
+                        <p class="card-text">
+                            <%= review.comment %>
+                        </p>
+                        <p class="card-text">
+                            <%= review.rating %>starts
+                        </p>
+
+                    </div>
+                    <form class="mb-3 mt-3" method="post"
+                        action="/listing/<%= Listing._id %>/reviews/<%= review._id %>?_method=delete ">
+                        <button class="btn btn-sm btn-dark">Delete</button>
+                    </form>
+
+                </div>
+
+
+                <% } %>
+        </div>
+
+
+    </div>
+    </div>
